# CS4900QuadSolver

./: CHANGELOG.md
core/: Addendum
core/docs/: Automation  IEEE Standard 754 Floating-Point.html  Install  Maintenance  Ownsership  ProgrammingStandards  ProgrammingStandards.html  ProgrammingStandards.md  Quadratic Solver  System Testing Standards  Unit Testing Standards  User_ReadMe  Version Control
core/docs/TPS/: Copy of Quadratic Equation Solver - October 14, 7_44 PM.docx  Copy of Quadratic Equation Solver - October 8, 12_02 PM.docx  Copy of TPS Report - Quadratic Equation Solver - October 14, 7_29 PM.docx  Copy of TPS Report 10_22_2018 - November 5, 7_42 AM.docx  Copy of TPS Report 10_22_2018 - October 21, 8_43 PM.docx  Copy of TPS Report 10_22_2018 - October 29, 7_50 AM.docx
core/docs/gantt/: gantt.xlsx
core/docs/stories/: Copy of Quadratic Program Stories - November 5, 7_41 AM.docx  Copy of Quadratic Program Stories - October 14, 7_46 PM.docx  Copy of Quadratic Program Stories - October 21, 8_39 PM.docx  Copy of Quadratic Program Stories - October 29, 7_43 AM.docx  Copy of Quadratic Program Stories - October 8, 8_53 AM.docx  Copy of Quadratic Program Stories - September 30, 8_10 PM.docx
core/spikes/IEEE-fp/: IEEE-fp_Spike.c  IEEE-fp_spike  (+1 more)
core/spikes/makefile/: README.md  config.h.in  config.status  configure.ac  quadSolver  quadSolver.c  quadSolverRoots.c  quadSolverSqrt.c
core/spikes/makefile/autom4te.cache/: traces.0  traces.1
core/spikes/makefile/testing/: expectedOut2.txt  mockQuadSolverSqrt.h  out.txt  t1  t1.c  t2  t2.c
core/src/: log.txt
(+26 files in other folders)
